--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "element3": "^0.0.40",
     "naive-ui": "^2.25.2",
     "postcss": "^7",
+    "prettier-plugin-tailwindcss": "^0.1.10",
     "remixicon": "^2.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "uikit": "^3.11.1",
     "vue": "^3.0.0",
+    "vue-lottie": "^0.2.1",
     "vue-router": "^4.0.13",
     "vueisotope": "^3.1.2",
     "vuex": "^4.0.0-0"
@@ -38,7 +40,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.6.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-tailwind": "~2.2.18"
