--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "^3.0.0",
     "vue-lottie": "^0.2.1",
     "vue-router": "^4.0.13",
+    "vue3-lottie": "^2.1.0",
     "vueisotope": "^3.1.2",
     "vuex": "^4.0.0-0"
   },
