--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^2.0.0",
     "@heroicons/vue": "^1.0.6",
     "@lottiefiles/vue-lottie-player": "^1.0.5",
     "@tailwindcss/postcss7-compat": "^2.2.17",
