--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^3.0.0",
     "vue-lottie": "^0.2.1",
     "vue-router": "^4.0.13",
+    "vue-sweetalert2": "^5.0.5",
     "vue3-lottie": "^2.1.0",
     "vueisotope": "^3.1.2",
     "vuex": "^4.0.0-0"
