--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue3-project",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -23,6 +24,7 @@
     "postcss": "^7",
     "prettier-plugin-tailwindcss": "^0.1.10",
     "remixicon": "^2.5.0",
+    "swiper": "^8.1.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "uikit": "^3.14.1",
     "vue": "^3.0.0",
