--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "uikit": "^3.14.1",
     "vue": "^3.0.0",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-lottie": "^0.2.1",
     "vue-router": "^4.0.13",
     "vue-sweetalert2": "^5.0.5",
